@startuml
class Alumno{
- nombre: String
- apellido: String
- legajo : String
- aprobadas: List<Materia>
+ aprobarMateria(materia: Materia): void
+ aproboMateria(materia: Materia): bool
+ cumpleCorrelativas(materias: List<Materia>): bool
}

class Materia {
- nombre: String
- codigo: String
- correlativas: List<Materia>
+ agregarCorrelativa(materia: Materia): void
}

class Inscripcion {
- alumno: Alumno
- materias: List<Materia>
+ aprobada(): bool
}

Inscripcion --> Materia
Inscripcion --> Alumno
Alumno --> "*" Inscripcion
Alumno --> "*" Materia
Materia --> "*" Materia

@enduml